yaml_files/ubuntu_pod_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: test
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
