yaml_files/ubuntuping_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ddosify/curlubuntutestapp:latest
    command: ["sleep", "3600"]
