yaml_files/web_server_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: dichvuxequangkhai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server-svc
            port:
              number: 80
  tls:
  - hosts:
    - dichvuxequangkhai.com
    secretName: my-tls-secret
